 - do not allow student to disconnect from teacher while in class
 - i18n: new localization: Russian
 - allow teacher to remove and re-add students from/to class
 - allow teacher to see when students change names
 - display students screen on global view
 - allow to send actions to individual students
 - implemented class shutdown
 - ceiling scaling values to avoid "wireframes" in weird resolutions

0.0.4:
 - properly close file selection dialog
 - implemented automatic screen sharing when in fullscreen mode

0.0.3:
 - implemented url sharing
 - implemented file sharing

0.0.2:
 - implement raise hand functionality
 - implement popup menus on teacher
 - support viewing student screens

0.0.1:
 - initial version
 - support screen sharing and screen locking
 - broadcast-based teacher discovery
 - multicast-based screen projection