@@ -1,7 +1,6 @@
 TODO list for openclass
 
 
-- Implement teacher selection
 - Group chat (?)
 - Logging
 - Individual messaging from student to teacher
